--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 
 *{
   box-sizing: border-box;
-  font-size: 14px;
+  font-size: 10px;
   padding: 0;
   margin: 0;
   list-style: none;
@@ -10,13 +10,11 @@
   font-family: "맑은 고딕";
   color: #333;
 }
-img{
-  width: 100%;
-  height: 100%;
-  object-fit: fill;
-  position: absolute;
-  top: 0;
-  left: 0;
+h2{
+  background: #cacaca;
+  display: inline;
+  padding: 10px;
+  border-radius: 10px 10px 0 0;
 }
 a{
   display: block;
@@ -32,14 +30,20 @@ header{
 }
 .logo{
   width: 200px;
-  position: relative;
+}
+.logo img{
+  height: 100px;
+  width: 100%;
+  object-fit: fill;
 }
 
 nav{
   border: 1px solid #333;
+  border-radius: 10px 10px 0 0;
   width: calc(100% - 200px);
   margin: 20px;
   text-align: center;
+  background: #ebebeb;
 }
 nav ul{
   display: flex;
@@ -49,6 +53,9 @@ nav ul{
 nav ul li{
   flex-grow: 1;
 }
+nav ul li+li{
+  border-left: 1px solid #333;
+}
 nav ul li:hover a{
   font-weight: bold;
 }
@@ -56,46 +63,148 @@ nav ul li:hover a{
 nav .sub-menu{
   flex-direction: column;
   background: #333;
-  opacity: 0.7;
+  opacity: 0.85;
+  z-index: 10;
+  position: relative;
   display: none;
 }
 nav .sub-menu a{
   margin: 10px 0;
   color: #fff;
 }
+
 nav .sub-menu li:hover a{
   color: #e89696;
   font-weight: bold;
 }
-
+.hidden a{
+  opacity: 0;
+  cursor: default;
+}
 
 .swapper{
   height: 400px;
-  position: relative;
+  overflow: hidden;
+}
+.swapper img{
+  width: 100%;
+  height: 400px;
+  object-fit: fill;
 }
 
 .contents{
-  border: 1px solid #333;
   display: flex;
   height: 250px;
 }
+
+
 .shortcut{
-  border: 1px solid #333;
+  margin: 10px;
   width: calc(100% - 600px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around
 }
-.gallery{
-  border: 1px solid #333;
-  width: 300px;
+.shortcut >*{
+  display: flex;
+  align-items: center;
+  border: 1px solid #ccc;
 }
-.notice{
-  border: 1px solid #333;
-  width: 300px;
+.shortcut img{
+  width: 80px;
+  height: 80px;
+  margin: 10px;
+  border-radius: 2px;
+}
+.shortcut div>div{
+  padding: 8px;
+}
+.shortcut img:hover{
+  opacity: 0.7;
+  transition: 0.3s;
 }
 
-footer{
-  border: 1px solid #333;
-  height: 100px;
+
+
+
+
+
+
+.gallery{
+  width: 300px;
+  margin: 30px 20px;
 }
+.gallery img{
+  width: 60px;
+  height: 60px;
+  object-fit: fill;
+  border-radius: 2px;
+}
+.gallery ul{
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  align-items: center;
+  border: 1px solid #cacaca;
+  height: 150px;
+}
+
+
+.notice{
+  width: 300px;
+  margin: 30px 10px;
+}
+.notice div{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border: 1px solid#cacaca;
+  gap: 5px;
+  height: 150px;
+}
+.notice div a{
+  margin: 1px 5px;
+}
+.notice div a+a{
+  border-top: 1px solid #ebebeb;
+}
+
+.notice div a:hover{
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+
+footer{
+  height: 100px;
+  background: #ebebeb;
+  display: flex;
+  align-items: center;
+  color: #ccc;
+}
+footer img{
+  width: 200px;
+  margin-top: 15px;
+}
+footer ul{
+  display: flex;
+  text-align: center;
+}
+footer li{
+  margin: 10px 0 0;
+  padding: 0 10px;
+}
+footer ul li+li{
+  border-left: 1px solid #333;
+}
+footer li:hover{
+  text-decoration: underline;
+}
+footer p{
+  margin: 10px;
+}
+
+
 .spot-menu{
   display: none;
 }
