--- a/css/main.css
+++ b/css/main.css
@@ -85,100 +85,123 @@ nav .sub-menu li:hover a{
   height: 400px;
   object-fit: fill;
 }
-
+/*-------------------------------------*/
 .contents{
   display: flex;
   height: 250px;
 }
 
 
-.shortcut{
+.review{
   width: calc(100% - 600px);
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-
   padding: 20px;
+  position: relative;
 }
-.shortcut >*{
+.shortcut{
+  background: #ebebeb;
+  padding:0 10px;
   display: flex;
+  flex-direction: column;
+  border: 1px solid #ccc;
+}
+.shortcut>*{
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  flex-grow: 1;
   align-items: center;
   border: 1px solid #ccc;
 }
-.shortcut img{
-  width: 80px;
-  height: 80px;
-  margin: 10px;
-  border-radius: 2px;
+.review_title{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+
 }
-.shortcut div>div{
-  padding: 8px;
-}
-.shortcut img:hover{
-  opacity: 0.7;
-  transition: 0.3s;
+.review img{
+  width: 60px;
+  height: 60px;
+  border-radius: 5px;
 }
 
-
-
+/*-------------------------------------*/
 .tab{
   width: 600px;
   height: 250px;
+  overflow: hidden;
+  padding: 20px;
   display: flex;
   flex-direction: column;
-
-  padding: 20px;
 }
-.tab .tabmenu{
+.tabmenu{
   display: flex;
-  position: relative;
-  z-index: 1;
-  top: 10px;
-  left: 20px;
 }
-
-.tab .tabmenu a{
-  display: block;
+.tabmenu li{
   padding: 5px 10px;
-  border: 1px solid #cacaca;
-  border-radius: 5px 5px 0 0;
-  border-bottom: none;
   background: #ccc;
+  border-radius: 5px 5px 0 0;
 }
-
-
-
+.tabmenu .active{
+  background: #ebebeb;
+}
 
 #gallery{
-  text-align: center;
-  border: 1px solid #cacaca;
-  margin: 10px 20px;
-}
-
-#gallery ul{
-  margin: 30px 0;
   display: flex;
+  border: 1px solid #ccc;
+  flex-direction: column;
+  text-align: center;
   justify-content: space-evenly;
-  align-items: center;
+  flex-grow: 1;
+  
 }
-
-
+#gallery ul{
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  
+}
+#gallery ul li{
+  padding:  0 0 10px;
+  border: 1px solid #ebebeb;
+  border-radius: 5px;
+  background: #ebebeb;
+}
 #gallery img{
-  width: 90px;
-  height: 80px;
-  border-radius: 2px;
+  width: 100px;
+  height: 90px;
+  padding: 10px;
+  border-radius: 5px;
   transition: 0.3s;
 }
-#gallery .index_btn{
-  padding: 7px;
-}
-
 #gallery img:hover{
   opacity: 0.7;
 }
 
+
 #notice{
+  display: flex;
+  border: 1px solid #ebebeb;
+  flex-direction: column;
+  flex-grow: 1;
   display: none;
+}
+#notice li{
+  padding: 5px;
+  border-bottom: 1px solid #ebebeb;
+  display: flex;
+  justify-content: space-between;
+}
+#notice li:last-child{
+  border: none;
+}
+#notice li:hover{
+  font-weight: bold;
+  background: #ebebeb;
+}
+#notice li:hover a{
+  text-decoration: underline;
 }
 
 
