--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ main{
 header{
   display: flex;
   height: 70px;
+  align-items: stretch;
 }
 .logo{
   width: 200px;
@@ -33,76 +34,42 @@ header{
 }
 /*----------------------------------------*/
 .main-menu{
-  width: calc(100% - 200px);
-  background: #ffebfa;
-
-  display: flex;
   flex-grow: 1;
-  justify-content: center;
+  display: flex;
+  border: 1px solid #333;
 }
 .main-menu ul{
-  border-radius: 10px 10px;
-  width: 100%;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-
-  
-
-}
-.main-menu>ul>li{
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
-.main-menu a{
-  font-size: 16px;
-}
-
-
-
-
-.main-menu>ul{
-  display: flex;
-  justify-content: space-evenly;
-  margin-top: 20px;
-}
-.main-menu ul li{
   flex-grow: 1;
-}
-.main-menu ul li+li{
-  border-left: 1.5px solid #ffabe9;
-}
-.main-menuav>ul>a{
-  height: 100%;
-  font-size: 14px;
+  display: flex;
+  text-align: center;
+  align-items: stretch;
 }
 
-
-.main-menu .sub-menu{
+.main-menu>ul>li{
+  flex-grow: 1;
+  background: #eeeeee;
+  border: 1px solid #333;
+}
+.main-menu>ul>li>a{
+  font-size: 15px;
+}
+.main-menu>ul>li>.sub-menu{
+  position: absolute;
+  z-index: 20;
+  display: flex;
   flex-direction: column;
-  background: #333;
-  opacity: 0.85;
-  padding: 5px 0;
-  z-index: 10;
-  position: relative;
+  top: 70px;
+  background: #000;
+  opacity: 0.5;
 }
-.main-menu .sub-menu li{
-  border: none;
-}
-.main-menu .sub-menu a{
-  margin: 10px 0;
+.sub-menu>a{
   color: #fff;
+  opacity: revert;
 }
 
-.main-menu .sub-menu li:hover a{
-  color: #e89696;
-}
-.hidden a{
-  opacity: 0;
-  cursor: default;
-}
+
+
+
 
 
 /*---------------------------------*/
