--- a/css/main.css
+++ b/css/main.css
@@ -36,37 +36,50 @@ header{
 .main-menu{
   flex-grow: 1;
   display: flex;
-  border: 1px solid #333;
 }
 .main-menu ul{
   flex-grow: 1;
   display: flex;
   text-align: center;
   align-items: stretch;
+  padding: 5px;
 }
 
 .main-menu>ul>li{
   flex-grow: 1;
-  background: #eeeeee;
-  border: 1px solid #333;
+  background: #ffeaea;
+  position: relative;
 }
 .main-menu>ul>li>a{
-  font-size: 15px;
+  font-size: 17px;
+  padding-top: 20px;
 }
 .main-menu>ul>li>.sub-menu{
   position: absolute;
+  top: 65px; 
   z-index: 20;
+  left: 0;
+  right: 0;
   display: flex;
   flex-direction: column;
-  top: 70px;
+  
+  padding: 15px 20px 0;
   background: #000;
-  opacity: 0.5;
-}
-.sub-menu>a{
-  color: #fff;
-  opacity: revert;
-}
+  opacity: 0.7;
 
+  display: none;
+}
+.sub-menu a{
+  color: #ffffff;
+  font-size: 16px;
+  padding-bottom: 15px;
+}
+.sub-menu a:hover{
+  color: #fabebe;
+}
+.sub-menu .hidden{
+  display: none;
+}
 
 
 
@@ -82,6 +95,8 @@ header{
   height: 400px;
   object-fit: fill;
 }
+
+
 /*-------------------------------------*/
 .contents{
   display: flex;
