--- a/css/main.css
+++ b/css/main.css
@@ -84,16 +84,56 @@ header{
 
 
 /*---------------------------------*/
-.swapper{
+.swapper {
   height: 400px;
-  overflow: hidden;
-}
-.swapper img{
-  width: 100%;
-  height: 400px;
-  object-fit: fill;
+  overflow: hidden; /* 슬라이드가 벗어나는 부분을 숨기기 위해 사용 */
+  position: relative;
 }
 
+.slide-img {
+  height: 400px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  position: relative;
+  
+}
+
+.slide-img li {
+  height: 400px;
+}
+.slide-img img{
+  width: 100%;
+  object-fit: fill;
+
+}
+.radio-buttons {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  padding: 5px;
+  border-radius: 5px;
+  transform: translateX(-50%);
+  background: #ffffffc0;
+}
+
+.radio-buttons input[type="radio"] {
+  display: none;
+}
+
+.radio-buttons label {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  background-color: rgb(76, 76, 76);
+  border-radius: 50%;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.radio-buttons input[type="radio"]:checked + label {
+  background-color: rgb(186, 186, 186);
+}
 
 /*-------------------------------------*/
 .contents{
@@ -125,7 +165,7 @@ header{
 .review_title{
   position: absolute;
   top: 10px;
-  right: 10px;
+  left: 10px;
   font-size: 20px;
 }
 .review img{
